ACM-ICPC/training/C.err
C.cpp:9:1: error: ‘dp’ does not name a type
 dp[0] = 0;
 ^
C.cpp:10:1: error: ‘dp’ does not name a type
 dp[1] = 1;
 ^
C.cpp: In function ‘int main()’:
C.cpp:24:7: error: expected ‘;’ before ‘p’
       p++;
       ^
C.cpp:25:19: warning: left operand of comma operator has no effect [-Wunused-value]
     if (p == 2) k << 1, p = 0;
                   ^
